--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="c:\Users\algifari\Pictures\Saved Pictures\WhatsApp Image 2023-09-12 at 01.49.02.jpg" alt="algifari fathulbari" width="80">
+          <img src="assets/images/WhatsApp Image 2023-09-12 at 01.49.02.jpg" alt="algifari fathulbari" width="80">
         </figure>
 
         <div class="info-content">
